[package]
name = "beeper-led-blinker"
version = "0.1.0"
edition = "2021"

[dependencies]
led-controller = { path = "../led-controller" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive", "env"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "beeper-led-blinker"
path = "src/main.rs"
