[package]
name = "dbus-notification-led-blinker"
version = "0.1.0"
edition = "2021"

[dependencies]
led-controller = { path = "../led-controller" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive", "env"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.0"

[[bin]]
name = "dbus-notification-led-blinker"
path = "src/main.rs"
